Few spacing fixes

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -3,6 +3,7 @@
 
 .applist {
     margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .absolute-center {
